# caffeine-backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  index.sql  init-letsencrypt.sh  pyproject.toml  requirements.txt  table.sql
.github/workflows/: deploy.yml
api/v1/: app.py
api/v1/routes/: auth.py  chat.py  chatspace.py
core/: auth.py  config.py  database.py
data/: drinks.csv  seed.py
database/: test_db.py
rag/: embedding.py  model.py  pipeline.py  promps.py  search.py  tool.py
tasks/: collector.py  crawler.py  loader.py  pipeline.py  run_pipeline_local.py
terraform/: variables.tf
utils/: util.py
