[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "greenlet>=3.3.0",
    "langchain-ollama>=1.0.1",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "supabase>=2.27.0",
    "uvicorn>=0.38.0",
]
